# birthdays-backend

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Rocket.toml
migrations/2017-12-14-150218_create_birthdays/: down.sql  up.sql
migrations/2018-01-05-033649_add_user/: down.sql  up.sql
migrations/2018-03-19-012833_notifications/: down.sql  up.sql
src/: main.rs  models.rs  notifications.rs  schema.rs
