[package]
name = "birthdays-backend"
version = "0.1.0"
authors = ["Michael Fletcher <m.fletcher@theplanet.ca>"]



[dependencies]
# date math and mapping postgres date types
chrono = { version = "0.4", features = ["serde"] }

# periodic execution
scheduled-thread-pool = "0.2.0"

# rocket & the web
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"

# For serializion to/from json
serde = "1.0"
serde_derive = "1.0"

# diesel 
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
diesel_migrations = "1.3.0"
#diesel_infer_schema = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.13.0"
r2d2-diesel = "1.0.0"

r2d2 = "0.8.2"
#r2d2_postgres = "0.14.0"

# making https requests
reqwest = "0.9.4"


# Sentry for error reporting.
sentry = "0.12.0"

